# Stocks

./: .gitignore  Cargo.toml  README.md  meson.build  org.byteforge.stocks.json
.github/workflows/: flatpak.yml
data/: meson.build  org.byteforge.stocks.appdata.xml.in  org.byteforge.stocks.desktop.in  org.byteforge.stocks.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.rs  config.rs  currency.rs  currency_label.rs  main.rs  meson.build  stocks.gresource.xml  symbol.rs  symbol_chart.rs  symbol_trend.rs  symbol_trend.ui  window.rs  window.ui
src/symbol/: imp.rs  mod.rs
src/symbol_list_box_row/: imp.rs  mod.rs
src/yahoo_finance_model/: imp.rs  mod.rs
