[package]
name = "stocks"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.6", package = "gtk4" }
stocks_api = "0.1.4"
tokio = { version = "1.27.0", features = ["full"] }

[dependencies.adw]
package = "libadwaita"
version = "0.3"
features = ["v1_2"]
